[package]
name = "screeps"
version = "0.1.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
edition = "2018"
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.58"
js-sys = "0.3.35"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.35"
features = [
    "console",
]
